// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].super-compressed.png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "async.async.js?ver=[hash]",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "async.async.super-compressed.js.gz?ver=[hash]",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].super-compressed.svg.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js?var=[hash]",
    10098,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "main.super-compressed.js.gz?var=[hash]",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.super-compressed.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/js/async.async.js.super-compressed.gz?ver=[hash]#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/js/async.async.js?ver=[hash]#hash",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "assets/js/main.js.super-compressed.gz?var=[hash]#hash",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/js/main.js?var=[hash]#hash",
    10124,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "[hash].svg.super-compressed.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "async.async.js?ver=[hash]#hash",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js?var=[hash]#hash",
    10103,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[name][ext].gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[name][ext].gz?var=[hash]",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "[name][ext].gz?ver=[hash]",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "related": {},
    },
  ],
  [
    "async.async.js?ver=[hash]#hash",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "main.js?var=[hash]#hash",
    10103,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `
[
  "Error:   × Conflict: Multiple assets emit different content to the same filename [name][ext].gz
",
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `[]`;

exports[`"filename" option should work: assets 1`] = `
[
  [
    "[hash].png",
    10069,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.png",
    },
  ],
  [
    "[hash].png.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/scripts/async.async.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/scripts/async.async.js?ver=[hash]#hash",
    438,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "assets/scripts/main.js.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
  [
    "assets/scripts/main.js?var=[hash]#hash",
    10129,
    {
      "assetType": "javascript",
      "chunkhash": [],
      "contenthash": [
        "[hash]",
      ],
      "fullhash": [],
      "immutable": true,
      "javascriptModule": false,
      "related": {},
    },
  ],
  [
    "[hash].svg",
    235,
    {
      "assetType": "asset",
      "chunkhash": [],
      "contenthash": [],
      "fullhash": [
        "[hash]",
      ],
      "immutable": true,
      "related": {},
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "[hash].svg.gz",
    "<compressed>",
    {
      "assetType": "unknown",
      "chunkhash": [],
      "compressed": true,
      "contenthash": [],
      "fullhash": [],
      "immutable": true,
      "related": {},
    },
  ],
]
`;

exports[`"filename" option should work: errors 1`] = `[]`;

exports[`"filename" option should work: warnings 1`] = `[]`;
